Add Activity Six

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="no_7">7.</string>
     <string name="no_8">8.</string>
     <string name="semangat">JANGAN PUTUS ASA DAN TETAP SEMANGAT!</string>
+    <string name="capaian_pembelajaran">CAPAIAN PEMBELAJARAN</string>
+    <string name="content_cp">Dalam mencapai tujuan dan prestasi belajar secara maksimal, berikut adalah langkah-langkah yang perlu kamu ikuti agar dapat memahami serta menggunakan modul ini dengan baik :</string>
+    <string name="petunjuk_penggunaan_modul">Petunjuk Penggunaan Modul</string>
 </resources>
