--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,9 @@
     <string name="nine_guru_two">Sekarang coba kamu perhatikan penjelasan berikut ini!</string>
     <string name="list_kunjaw">1. BENAR\n2. BENAR\n3. SALAH\n4. BENAR\n5. SALAH\n6. BENAR\n7. SALAH\n8. SALAH\n9. SALAH\n10. BENAR</string>
     <string name="orang_yang_berhasil_adalah_mereka_yang_bersungguh_sungguh">\"orang yang berhasil adalah mereka yang bersungguh-sungguh\"</string>
+    <string name="daftar_pustaka">Daftar Pustaka</string>
+    <string name="materi_kegiatan_ekonomi">Materi Kegiatan Ekonomi</string>
+    <string name="link_dapus_1">https://ditsmp.kemdikbud.go.id/kegiatan-ekonomi-produksi-distribusi-dan-konsumsi/</string>
+    <string name="materi_ekonomi_kreatif">Materi Ekonomi Kreatif</string>
+    <string name="title_cover_belakang">PENDIDIKAN GURU SEKOLAH DASAR\nDEPARTEMEN PEDAGOGIK\nFAKULTAS ILMU PENDIDIKAN\nUNIVERSITAS PENDIDIKAN INDONESIA\n2022</string>
 </resources>
