part 3 Finishing: fix bug data & layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">InteractiveModuleProject</string>
+    <string name="app_name">Modul Kemiri</string>
     <string name="pengantar_petunjuk">Dalam mencapai tujuan dan prestasi belajar secara maksimal, berikut adalah langkah-langkah yang perlu kamu ikuti agar dapat memahami serta menggunakan modul ini dengan baik :</string>
     <string name="petunjuk_1">Berdo’alah kepada Tuhan Yang Maha Esa sesuai dengan kepercayaan dan agamamu masing-masing.</string>
     <string name="petunjuk_2">Pahamilah capaian pembelajaran dan tujuan pembelajaran yang tercantum agar kamu dapat mengetahui materi apa yang akan kamu pelajari dalam modul ini.</string>
